--- a/sections/A1.tex
+++ b/sections/A1.tex
@@ -1,4 +1,4 @@
-\section{Der Teilchen-Dualismus - Welle beim Licht}
+\section{A.1 Der Teilchen-Dualismus - Welle beim Licht}
 
 Kopuskeltheorie (Newton):\quad Licht ist ein Strom von Partikeln, die von der Lichtquelle ausgehend geradlinig den Raum durchqueren.\\
 
@@ -13,7 +13,15 @@ Ende 19./Anfang 20. Jhrd wurden drei Phänomene festgestellt, die mit der Wellen
     \item Lichtelektrischter Effekt:
         \subitem Die Energie der freigesetzten Elektronen ist proportional zur Frequenz des Lichtes, während die Zahl der freigesetzten Elektronen proportional zur Intensität des eingestrahlten Lichts ist.
         \subitem $\,\to\,$ Erklärung nur mit der Vorstellung von Photonen (Teilchen) verträglich
+
+    \newpage
     \item Strahlungskurve des Schwarzen Strahlers
         \subitem Die spektrale Strahlungsdichte steigt mit $\lambda^5$ an, erreicht ein Maximum und fällt dann exponentiell zu langen Wellenlängen hin ab $\,\to\,$ erklärbar nur mit Photonen.
 \end{itemize}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.75\textwidth]{media/strahlungsdichte_schwarzer_körper.png}
+    \caption{Strahlungsdichte am schwarzen Körper}
+    \label{fig:meine-grafik}
+   \end{figure}
