--- a/physik.tex
+++ b/physik.tex
@@ -2,6 +2,7 @@
 \usepackage{import}
 \usepackage{tabto}
 \usepackage[a4paper, left= 2cm, textwidth=15cm]{geometry}
+\usepackage{graphicx}
 
 \begin{document}
     \import{sections/}{title.tex}
