--- a/sections/A1.tex
+++ b/sections/A1.tex
@@ -16,7 +16,7 @@ Ende 19./Anfang 20. Jhrd wurden drei Phänomene festgestellt, die mit der Wellen
 
     \newpage
     \item Strahlungskurve des Schwarzen Strahlers
-        \subitem Die spektrale Strahlungsdichte steigt mit $\lambda^5$ an, erreicht ein Maximum und fällt dann exponentiell zu langen Wellenlängen hin ab $\,\to\,$ erklärbar nur mit Photonen.
+       {\color{red} \subitem Die spektrale Strahlungsdichte steigt mit $\lambda^5$ an, erreicht ein Maximum und fällt dann exponentiell zu langen Wellenlängen hin ab $\,\to\,$ erklärbar nur mit Photonen.}
 \end{itemize}
 
 \begin{figure}[h]
