--- a/physik.tex
+++ b/physik.tex
@@ -3,6 +3,9 @@
 \usepackage{tabto}
 \usepackage[a4paper, left= 2cm, textwidth=15cm]{geometry}
 \usepackage{graphicx}
+\usepackage{xcolor}
+\usepackage{hyperref}
+\usepackage{wrapfig}
 
 \begin{document}
     \import{sections/}{title.tex}
@@ -10,4 +13,6 @@
     \tableofcontents
     \newpage
     \import{sections/}{A1.tex}
+    \newpage
+    \import{sections/}{A2.tex}
 \end{document}
