--- a/physik.tex
+++ b/physik.tex
@@ -15,4 +15,6 @@
     \import{sections/}{A1.tex}
     \newpage
     \import{sections/}{A2.tex}
+    \newpage
+    \import{sections/}{A4.tex}
 \end{document}
