--- a/sections/A2.tex
+++ b/sections/A2.tex
@@ -36,7 +36,7 @@ vorwärtsbewegt (Realisierung der Lokalisierbarkeit eines Teilchens). Realisiere
 ($\,\to\,$ Zerfließen des Wellenpaketes).
 \\
 \\
-Aufenhaltswahrscheinlichkeit \mbox{\Large $ \{Psi = (Amplitude\,A)^2$}
+Aufenhaltswahrscheinlichkeit \mbox{\Large $ \Psi = (Amplitude\,A)^2$}
 \\
 \\
 Die Wahrscheinlichkeit, dass Teilchen an einem bestimmten Ort zu finden.
